fpp_analysis/src/tests/duplicate-symbols-single.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/duplicate-symbols-single.fpp:5:18
  |
5 |   active component C {
  |                    ^ redefinition of symbol C
  |
 ::: [ local path prefix ]/duplicate-symbols-single.fpp:0:1
  |
0 | / passive component C {
1 | |
2 | | }
  | |_^ previous definition is here

